# geodrill

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  NEWS.md  README  README.md  requirements.txt
doc/: Doxyfile.in  Makefile  make.bat
doc/source/: conf.py  index.rst
doc/xml/: CMakeLists_8txt.xml  file__utils_8cpp.xml  index.xml  io_8cpp.xml  main_8cpp.xml  namespacestd.xml
geodrill/: CMakeLists.txt  Doxyfile  GeoDrillConfig.h  file_utils.cpp  io.cpp  io.h  main.cpp
include/: GeoDrillConfig.h.in  file_utils.h
test/basic_tests/: CMakeLists.txt
